--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,44 +19,49 @@
   </head>
   <!-- Header -->
   <header class="header">
-    <nav>
-      <a class="logo link" href="./index.html">
+    <div class="header-container conteiner">
+    <nav class="header-navigation">
+      <a class="logo link box" href="./index.html">
         Web<span class="studio">Studio</span>
       </a>
-      <ul class="list">
-        <li><a class="nav-list link" href="./index.html">Studio</a></li>
-        <li>
+      <ul class="header-list">
+        <li class="header-item"><a class="nav-list link" href="./index.html">Studio</a></li>
+        <li class="header-item">
           <a class="nav-list link" href="./portfolio.html">Portfolio</a>
         </li>
-        <li><a class="nav-list link" href="">Contacts</a></li>
+        <li class="header-item"><a class="nav-list link" href="">Contacts</a></li>
       </ul>
     </nav>
     <address class="address">
-      <ul class="list">
-        <li>
+      <ul class="address-list">
+        <li class="address-item">
           <a class="address-contact link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="address-item">
           <a class="address-contact link" href="tel:+110001111111"
             >+11 (000) 111-11-11</a
           >
         </li>
       </ul>
     </address>
+  </div>
   </header>
   <main>
     <!-- Hero -->
     <section class="hero">
+      <div class="hero-container container">
       <h1 class="hero-title">
         Effective Solutions <br />
         for Your Business
       </h1>
       <button class="hero-button" type="button">Order Service</button>
+      </div>
     </section>
     <!-- Features -->
     <section class="features">
+      <div class="features-container container">
       <h2 hidden class="features-title">Advantages</h2>
       <ul class="list">
         <li>
@@ -84,9 +93,11 @@
           </p>
         </li>
       </ul>
+      </div>
     </section>
     <!-- What are We Doing -->
     <section class="examples">
+      <div class="examples-container container">
       <h2 class="examples-title">What are we doing</h2>
       <ul class="list">
         <li>
@@ -114,9 +125,11 @@
           />
         </li>
       </ul>
+      </div>
     </section>
     <!-- Team -->
     <section class="team">
+      <div class="team-container container">
       <h2 class="team-title">Our Team</h2>
       <ul class="list">
         <li class="teammate">
@@ -126,8 +139,7 @@
             width="264"
             height="260"
           />
-          <h3 class="teammate-name">Mark Guerrero</h3>
-          <p class="teammate-description">Product Designer</p>
+          <div class="teammate-container container"><h3 class="teammate-name">Mark Guerrero</h3><p class="teammate-description">Product Designer</p></div>
         </li>
         <li class="teammate">
           <img
@@ -136,8 +148,8 @@
             width="264"
             height="260"
           />
-          <h3 class="teammate-name">Tom Ford</h3>
-          <p class="teammate-description">Frontend Developer</p>
+          <div class="teammate-container container"><h3 class="teammate-name">Tom Ford</h3>
+          <p class="teammate-description">Frontend Developer</p></div>
         </li>
         <li class="teammate">
           <img
@@ -146,8 +158,8 @@
             width="264"
             height="260"
           />
-          <h3 class="teammate-name">Camila Garcia</h3>
-          <p class="teammate-description">Marketing</p>
+          <div class="teammate-container container"><h3 class="teammate-name">Camila Garcia</h3>
+          <p class="teammate-description">Marketing</p></div>
         </li>
         <li class="teammate">
           <img
@@ -156,20 +168,23 @@
             width="264"
             height="260"
           />
-          <h3 class="teammate-name">Daniel Wilson</h3>
-          <p class="teammate-description">UI Designer</p>
+          <div class="teammate-container container"><h3 class="teammate-name">Daniel Wilson</h3>
+          <p class="teammate-description">UI Designer</p></div>
         </li>
       </ul>
+      </div>
     </section>
   </main>
   <!-- Footer -->
   <footer class="footer">
+    <div class="footer-container container">
     <a class="logo link" href="./index.html">
-      Web<span class="studio-footer">Studio</span>
+      Web<span class="webstudio-footer">Studio</span>
     </a>
     <p class="footer-description">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
     </p>
+    </div>
   </footer>
 </html>
