--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,39 +18,41 @@
     />
   </head>
   <body>
-    <!-- Header -->
     <header class="header">
-      <nav>
-        <a class="logo link" href="./index.html">
+      <div class="header-container conteiner">
+      <nav class="header-navigation">
+        <a class="logo link box" href="./index.html">
           Web<span class="studio">Studio</span>
         </a>
         <ul class="list">
-          <li><a class="nav-list link" href="./index.html">Studio</a></li>
-          <li>
+          <li class="header-item"><a class="nav-list link" href="./index.html">Studio</a></li>
+          <li class="header-item">
             <a class="nav-list link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li><a class="nav-list link" href="">Contacts</a></li>
+          <li class="header-item"><a class="nav-list link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
-          <li>
+        <ul class="address-list">
+          <li class="address-item">
             <a class="address-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="address-item">
             <a class="address-contact link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <main>
       <!-- Filter Buttons -->
       <section class="filters">
-        <h1 hidden>Filters</h1>
+        <div class="filters-container container">
+        <h1 hidden class="hidden-title">Filters</h1>
         <ul class="list">
           <li>
             <button class="filters-button" type="button">All</button>
@@ -64,6 +70,8 @@
             <button class="filters-button" type="button">Marketing</button>
           </li>
         </ul>
+        </div>
+        <!-- Projects -->
         <ul class="list">
           <li>
             <a class="link" href=""
@@ -73,8 +81,8 @@
         Interface Concept"
                 width="360"
               />
-              <h2 class="project-title">Banking App Interface Concept</h2>
-              <p class="project-description">App</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Banking App Interface Concept</h2>
+              <p class="project-description">App</p></div></a
             >
           </li>
           <li>
@@ -84,22 +92,22 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2 class="project-title">Cashless Payment</h2>
-              <p class="project-description">Marketing</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Cashless Payment</h2>
+              <p class="project-description">Marketing</p></div></a
             >
           </li>
           <li>
             <a class="link" href=""
               ><img src="./images/img10.jpg" alt="Meditation App" width="360" />
-              <h2 class="project-title">Meditation App</h2>
-              <p class="project-description">App</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Meditation App</h2>
+              <p class="project-description">App</p></div></a
             >
           </li>
           <li>
             <a class="link" href=""
               ><img src="./images/img11.jpg" alt="Taxi Service" width="360" />
-              <h2 class="project-title">Taxi Service</h2>
-              <p class="project-description">Marketing</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Taxi Service</h2>
+              <p class="project-description">Marketing</p></div></a
             >
           </li>
           <li>
@@ -110,15 +118,15 @@
         illustrations"
                 width="360"
               />
-              <h2 class="project-title">Screen Illustrations</h2>
-              <p class="project-description">Design</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Screen Illustrations</h2>
+              <p class="project-description">Design</p></div></a
             >
           </li>
           <li>
             <a class="link" href=""
               ><img src="./images/img13.jpg" alt="Online Courses" width="360" />
-              <h2 class="project-title">Online Courses</h2>
-              <p class="project-description">Marketing</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Online Courses</h2>
+              <p class="project-description">Marketing</p></div></a
             >
           </li>
           <li>
@@ -129,22 +137,22 @@
         Stories Concept"
                 width="360"
               />
-              <h2 class="project-title">Instagram Stories Concept</h2>
-              <p class="project-description">Design</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Instagram Stories Concept</h2>
+              <p class="project-description">Design</p></div></a
             >
           </li>
           <li>
             <a class="link" href=""
               ><img src="./images/img15.jpg" alt="Organic Food" width="360" />
-              <h2 class="project-title">Organic Food</h2>
-              <p class="project-description">Web Site</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Organic Food</h2>
+              <p class="project-description">Web Site</p></div></a
             >
           </li>
           <li>
             <a class="link" href=""
               ><img src="./images/img16.jpg" alt="Fresh Coffee" width="360" />
-              <h2 class="project-title">Fresh Coffee</h2>
-              <p class="project-description">Web Site</p></a
+              <div class="project-card conteiner"><h2 class="project-title">Fresh Coffee</h2>
+              <p class="project-description">Web Site</p></div></a
             >
           </li>
         </ul>
@@ -152,13 +160,15 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
+      <div class="footer-container container">
       <a class="logo link" href="./index.html">
-        Web<span class="studio-footer">Studio</span>
+        Web<span class="webstudio-footer">Studio</span>
       </a>
       <p class="footer-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
