--- a/portfolio.html
+++ b/portfolio.html
@@ -53,27 +53,27 @@
       <section class="filters">
         <div class="filters-container container">
         <h1 hidden class="hidden-title">Filters</h1>
-        <ul class="list">
+        <ul class="filters-list">
           <li>
-            <button class="filters-button" type="button">All</button>
+            <button class="filter-button" type="button">All</button>
           </li>
           <li>
-            <button class="filters-button" type="button">Web Site</button>
+            <button class="filter-button" type="button">Web Site</button>
           </li>
           <li>
-            <button class="filters-button" type="button">App</button>
+            <button class="filter-button" type="button">App</button>
           </li>
           <li>
-            <button class="filters-button" type="button">Design</button>
+            <button class="filter-button" type="button">Design</button>
           </li>
           <li>
-            <button class="filters-button" type="button">Marketing</button>
+            <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
         </div>
         <!-- Projects -->
-        <ul class="list">
-          <li>
+        <ul class="projects-list">
+          <li class="projects-item">
             <a class="link" href=""
               ><img
                 src="./images/img8.jpg"
@@ -85,7 +85,7 @@
               <p class="project-description">App</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href=""
               ><img
                 src="./images/img9.jpg"
@@ -96,21 +96,21 @@
               <p class="project-description">Marketing</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img10.jpg" alt="Meditation App" width="360" />
               <div class="project-card conteiner"><h2 class="project-title">Meditation App</h2>
               <p class="project-description">App</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img11.jpg" alt="Taxi Service" width="360" />
               <div class="project-card conteiner"><h2 class="project-title">Taxi Service</h2>
               <p class="project-description">Marketing</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href="">
               <img
                 src="./images/img12.jpg"
@@ -122,14 +122,14 @@
               <p class="project-description">Design</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img13.jpg" alt="Online Courses" width="360" />
               <div class="project-card conteiner"><h2 class="project-title">Online Courses</h2>
               <p class="project-description">Marketing</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href="">
               <img
                 src="./images/img14.jpg"
@@ -141,14 +141,14 @@
               <p class="project-description">Design</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img15.jpg" alt="Organic Food" width="360" />
               <div class="project-card conteiner"><h2 class="project-title">Organic Food</h2>
               <p class="project-description">Web Site</p></div></a
             >
           </li>
-          <li>
+          <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img16.jpg" alt="Fresh Coffee" width="360" />
               <div class="project-card conteiner"><h2 class="project-title">Fresh Coffee</h2>
