--- a/index.html
+++ b/index.html
@@ -63,29 +63,29 @@
     <section class="features">
       <div class="features-container container">
       <h2 hidden class="features-title">Advantages</h2>
-      <ul class="list">
-        <li>
+      <ul class="features-list">
+        <li class="features-item">
           <h3 class="features-name">Strategy</h3>
           <p class="features-description">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h3 class="features-name">Punctuality</h3>
           <p class="features-description">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h3 class="features-name">Diligence</h3>
           <p class="features-description">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h3 class="features-name">Technologies</h3>
           <p class="features-description">
             Design practice focused on digital experiences. We bring forth a
@@ -99,8 +99,8 @@
     <section class="examples">
       <div class="examples-container container">
       <h2 class="examples-title">What are we doing</h2>
-      <ul class="list">
-        <li>
+      <ul class="examples-list">
+        <li class="examples-item">
           <img
             src="./images/img.jpg"
             alt="website-development"
@@ -108,7 +108,7 @@
             height="300"
           />
         </li>
-        <li>
+        <li class="examples-item">
           <img
             src="./images/img2.jpg"
             alt="apps-development"
@@ -116,7 +116,7 @@
             height="300"
           />
         </li>
-        <li>
+        <li class="examples-item">
           <img
             src="./images/img3.jpg"
             alt="content-creation"
@@ -131,7 +131,7 @@
     <section class="team">
       <div class="team-container container">
       <h2 class="team-title">Our Team</h2>
-      <ul class="list">
+      <ul class="team-list">
         <li class="teammate">
           <img
             src="./images/img4.jpg"
