--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a class="logo link box" href="./index.html">
         Web<span class="studio">Studio</span>
       </a>
-      <ul class="header-list">
+      <ul class="header-list list">
         <li class="header-item"><a class="nav-list link" href="./index.html">Studio</a></li>
         <li class="header-item">
           <a class="nav-list link" href="./portfolio.html">Portfolio</a>
@@ -33,7 +33,7 @@
       </ul>
     </nav>
     <address class="address">
-      <ul class="address-list">
+      <ul class="address-list list">
         <li class="address-item">
           <a class="address-contact link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -63,7 +63,7 @@
     <section class="features">
       <div class="features-container container">
       <h2 hidden class="features-title">Advantages</h2>
-      <ul class="features-list">
+      <ul class="features-list list">
         <li class="features-item">
           <h3 class="features-name">Strategy</h3>
           <p class="features-description">
@@ -99,7 +99,7 @@
     <section class="examples">
       <div class="examples-container container">
       <h2 class="examples-title">What are we doing</h2>
-      <ul class="examples-list">
+      <ul class="examples-list list">
         <li class="examples-item">
           <img
             src="./images/img.jpg"
@@ -131,7 +131,7 @@
     <section class="team">
       <div class="team-container container">
       <h2 class="team-title">Our Team</h2>
-      <ul class="team-list">
+      <ul class="team-list list">
         <li class="teammate">
           <img
             src="./images/img4.jpg"
