--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <a class="logo link box" href="./index.html">
           Web<span class="studio">Studio</span>
         </a>
-        <ul class="list">
+        <ul class="header-list list">
           <li class="header-item"><a class="nav-list link" href="./index.html">Studio</a></li>
           <li class="header-item">
             <a class="nav-list link" href="./portfolio.html">Portfolio</a>
@@ -33,7 +33,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li class="address-item">
             <a class="address-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -53,7 +53,7 @@
       <section class="filters">
         <div class="filters-container container">
         <h1 hidden class="hidden-title">Filters</h1>
-        <ul class="filters-list">
+        <ul class="filters-list list">
           <li>
             <button class="filter-button" type="button">All</button>
           </li>
@@ -72,7 +72,7 @@
         </ul>
         </div>
         <!-- Projects -->
-        <ul class="projects-list">
+        <ul class="projects-list list">
           <li class="projects-item">
             <a class="link" href=""
               ><img
