--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container conteiner">
+      <div class="header-container container">
       <nav class="header-navigation">
         <a class="logo link box" href="./index.html">
           Web<span class="studio">Studio</span>
@@ -70,7 +70,6 @@
             <button class="filter-button" type="button">Marketing</button>
           </li>
         </ul>
-        </div>
         <!-- Projects -->
         <ul class="projects-list list">
           <li class="projects-item">
@@ -156,6 +155,7 @@
             >
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- Footer -->
