--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <!-- Header -->
   <header class="header">
-    <div class="header-container conteiner">
+    <div class="header-container container">
     <nav class="header-navigation">
       <a class="logo link box" href="./index.html">
         Web<span class="studio">Studio</span>
@@ -178,7 +178,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container container">
-    <a class="logo link" href="./index.html">
+    <a class="logo link footer" href="./index.html">
       Web<span class="webstudio-footer">Studio</span>
     </a>
     <p class="footer-description">
