--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
         Interface Concept"
                 width="360"
               />
-              <div class="project-card conteiner"><h2 class="project-title">Banking App Interface Concept</h2>
+              <div class="project-card container"><h2 class="project-title">Banking App Interface Concept</h2>
               <p class="project-description">App</p></div></a
             >
           </li>
@@ -91,21 +91,21 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <div class="project-card conteiner"><h2 class="project-title">Cashless Payment</h2>
+              <div class="project-card container"><h2 class="project-title">Cashless Payment</h2>
               <p class="project-description">Marketing</p></div></a
             >
           </li>
           <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img10.jpg" alt="Meditation App" width="360" />
-              <div class="project-card conteiner"><h2 class="project-title">Meditation App</h2>
+              <div class="project-card container"><h2 class="project-title">Meditation App</h2>
               <p class="project-description">App</p></div></a
             >
           </li>
           <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img11.jpg" alt="Taxi Service" width="360" />
-              <div class="project-card conteiner"><h2 class="project-title">Taxi Service</h2>
+              <div class="project-card container"><h2 class="project-title">Taxi Service</h2>
               <p class="project-description">Marketing</p></div></a
             >
           </li>
@@ -117,14 +117,14 @@
         illustrations"
                 width="360"
               />
-              <div class="project-card conteiner"><h2 class="project-title">Screen Illustrations</h2>
+              <div class="project-card container"><h2 class="project-title">Screen Illustrations</h2>
               <p class="project-description">Design</p></div></a
             >
           </li>
           <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img13.jpg" alt="Online Courses" width="360" />
-              <div class="project-card conteiner"><h2 class="project-title">Online Courses</h2>
+              <div class="project-card container"><h2 class="project-title">Online Courses</h2>
               <p class="project-description">Marketing</p></div></a
             >
           </li>
@@ -136,21 +136,21 @@
         Stories Concept"
                 width="360"
               />
-              <div class="project-card conteiner"><h2 class="project-title">Instagram Stories Concept</h2>
+              <div class="project-card container"><h2 class="project-title">Instagram Stories Concept</h2>
               <p class="project-description">Design</p></div></a
             >
           </li>
           <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img15.jpg" alt="Organic Food" width="360" />
-              <div class="project-card conteiner"><h2 class="project-title">Organic Food</h2>
+              <div class="project-card container"><h2 class="project-title">Organic Food</h2>
               <p class="project-description">Web Site</p></div></a
             >
           </li>
           <li class="projects-item">
             <a class="link" href=""
               ><img src="./images/img16.jpg" alt="Fresh Coffee" width="360" />
-              <div class="project-card conteiner"><h2 class="project-title">Fresh Coffee</h2>
+              <div class="project-card container"><h2 class="project-title">Fresh Coffee</h2>
               <p class="project-description">Web Site</p></div></a
             >
           </li>
