--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="header-container container">
       <nav class="header-navigation">
-        <a class="logo link box" href="./index.html">
+        <a class="webstudio.header" href="./index.html">
           Web<span class="studio">Studio</span>
         </a>
         <ul class="header-list list">
@@ -161,7 +161,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-container container">
-      <a class="logo link" href="./index.html">
+      <a class="logo link footer" href="./index.html">
         Web<span class="webstudio-footer">Studio</span>
       </a>
       <p class="footer-description">
