--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             width="264"
             height="260"
           />
-          <div class="teammate-container container"><h3 class="teammate-name">Tom Ford</h3>
+          <div class="teammate-container"><h3 class="teammate-name">Tom Ford</h3>
           <p class="teammate-description">Frontend Developer</p></div>
         </li>
         <li class="teammate">
