--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             width="264"
             height="260"
           />
-          <div class="teammate-container container"><h3 class="teammate-name">Mark Guerrero</h3><p class="teammate-description">Product Designer</p></div>
+          <div class="teammate-container"><h3 class="teammate-name">Mark Guerrero</h3><p class="teammate-description">Product Designer</p></div>
         </li>
         <li class="teammate">
           <img
@@ -158,7 +158,7 @@
             width="264"
             height="260"
           />
-          <div class="teammate-container container"><h3 class="teammate-name">Camila Garcia</h3>
+          <div class="teammate-container"><h3 class="teammate-name">Camila Garcia</h3>
           <p class="teammate-description">Marketing</p></div>
         </li>
         <li class="teammate">
@@ -168,7 +168,7 @@
             width="264"
             height="260"
           />
-          <div class="teammate-container container"><h3 class="teammate-name">Daniel Wilson</h3>
+          <div class="teammate-container"><h3 class="teammate-name">Daniel Wilson</h3>
           <p class="teammate-description">UI Designer</p></div>
         </li>
       </ul>
