--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container container">
-    <a class="logo link footer" href="./index.html">
+    <a class="logotype-footer" href="./index.html">
       Web<span class="webstudio-footer">Studio</span>
     </a>
     <p class="footer-description">
