--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer-container-container">
+      <div class="footer-container container">
       <a class="logotype-footer" href="./index.html">
         Web<span class="webstudio-footer">Studio</span>
       </a>
