final updates (hidden)

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       <!-- Filter Buttons -->
       <section class="filters">
         <div class="filters-container container">
-        <h1 hidden class="hidden-title">Filters</h1>
+          <h1 class="visually-hidden">Portfolio</h1>
         <ul class="filters-list list">
           <li>
             <button class="filter-button" type="button">All</button>
