--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Features -->
     <section class="features">
       <div class="features-container container">
-      <h2 hidden class="features-title">Advantages</h2>
+        <h2 class="visually-hidden">Features</h2>
       <ul class="features-list list">
         <li class="features-item">
           <h3 class="features-name">Strategy</h3>
