--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </main>
   <!-- Footer -->
   <footer class="footer">
-    <div class="footer-container container">
+    <div class="footer-container">
       <a class="logotype-footer" href="./index.html">
         Web<span class="webstudio-footer">Studio</span>
       </a>
