--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="header">
     <div class="header-container container">
       <nav class="header-navigation">
-        <a class="webstudio-header logo" href="./index.html">
+        <a class="webstudio-header logo link" href="./index.html">
           Web<span class="studio">Studio</span>
         </a>
         <ul class="header-list list">
