--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
     <!-- Team -->
     <section class="team">
-      <div class="team-container container">
+      <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list list">
           <li class="teammate">
