--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container container">
+      <div class="container">
       <nav class="header-navigation">
         <a class="webstudio-header logo link" href="./index.html">
           Web<span class="studio">Studio</span>
